--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,29 @@
 {
+  "name": "Caption Magic",
+  "version": "0.1",
   "manifest_version": 3,
-  "name": "YouTube Subtitles Customizer",
-  "version": "1.0",
   "description": "Personaliza los subtítulos en YouTube.",
-  "permissions": ["storage"],
-  "host_permissions": ["https://www.youtube.com/*"],
+  "permissions": ["storage", "scripting", "activeTab", "sidePanel"],
+  "host_permissions": ["*://www.youtube.com/*"],
+  "icons": {
+    "16": "icons/16.png",
+    "32": "icons/32.png",
+    "48": "icons/64.png",
+    "128": "icons/128.png"
+  },
   "action": {
-    "default_popup": "popup.html",
-    "default_icon": "icon.png"
+    "default_icon": {
+      "16": "icons/16.png",
+      "32": "icons/32.png",
+      "48": "icons/64.png"
+    },
+    "default_popup": "popup.html"
   },
   "content_scripts": [
     {
-      "matches": ["https://www.youtube.com/*"],
-      "js": ["content.js"]
+      "matches": ["*://www.youtube.com/*"],
+      "js": ["content.js"],
+      "css": ["styles/main.css"]
     }
   ]
 }
