--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "version": "0.1",
   "manifest_version": 3,
   "description": "Personaliza los subtítulos en YouTube.",
-  "permissions": ["storage", "scripting", "activeTab", "sidePanel"],
+  "permissions": ["storage", "scripting", "activeTab"],
   "host_permissions": ["*://www.youtube.com/*"],
   "icons": {
     "16": "icons/16.png",
