feat: add toggle event for set styles preset

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Caption Magic",
+  "name": "Beauty Captions",
   "version": "0.1",
   "manifest_version": 3,
   "description": "Personaliza los subtítulos en YouTube.",
