--- a/manifest.json
+++ b/manifest.json
@@ -5,24 +5,13 @@
   "description": "Personaliza los subtítulos en YouTube.",
   "permissions": ["storage", "scripting", "activeTab"],
   "host_permissions": ["*://www.youtube.com/*"],
-  "icons": {
-    "16": "icons/16.png",
-    "32": "icons/32.png",
-    "48": "icons/64.png",
-    "128": "icons/128.png"
-  },
   "action": {
-    "default_icon": {
-      "16": "icons/16.png",
-      "32": "icons/32.png",
-      "48": "icons/64.png"
-    },
     "default_popup": "popup.html"
   },
   "content_scripts": [
     {
       "matches": ["*://www.youtube.com/*"],
-      "js": ["content.js"]
+      "js": ["scripts/constants.js", "scripts/utils.js", "content.js"]
     }
   ]
 }
