--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,17 @@
   "description": "Personaliza los subtítulos en YouTube.",
   "permissions": ["storage", "scripting", "activeTab"],
   "host_permissions": ["*://www.youtube.com/*"],
+  "icons": {
+    "16": "icons/16.png",
+    "48": "icons/48.png",
+    "128": "icons/128.png"
+  },
   "action": {
+    "default_icon": {
+      "16": "icons/16.png",
+      "48": "icons/48.png",
+      "128": "icons/128.png"
+    },
     "default_popup": "popup.html"
   },
   "content_scripts": [
