--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
   "content_scripts": [
     {
       "matches": ["*://www.youtube.com/*"],
-      "js": ["scripts/constants.js", "scripts/utils.js", "content.js"]
+      "js": ["scripts/utils.js", "content.js"]
     }
   ]
 }
