--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "manifest_version": 3,
   "description": "BeautyCaptions - Enhance Your YouTube Subtitles",
-  "permissions": ["storage", "scripting", "activeTab"],
-  "host_permissions": ["*://www.youtube.com/*"],
+  "permissions": ["storage"],
+  "host_permissions": ["https://www.youtube.com/watch*"],
   "icons": {
     "16": "icons/16.png",
     "48": "icons/48.png",
@@ -20,7 +20,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://www.youtube.com/*"],
+      "matches": ["https://www.youtube.com/watch*"],
       "js": ["scripts/utils.js", "content.js"]
     }
   ]
